--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "@tanstack/react-start": "^1.145.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "redaxios": "^0.5.1"
+    "redaxios": "^0.5.1",
+    "zustand": "^5.0.9"
   },
   "devDependencies": {
     "@tailwindcss/vite": "^4.1.18",
