--- a/package.json
+++ b/package.json
@@ -19,10 +19,15 @@
     "@tanstack/react-router": "^1.144.0",
     "@tanstack/react-router-devtools": "^1.144.0",
     "@tanstack/react-start": "^1.145.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "dotenv": "^17.2.3",
+    "lucide-react": "^0.562.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "redaxios": "^0.5.1",
+    "tailwind-merge": "^3.4.0",
+    "tw-animate-css": "^1.4.0",
     "zustand": "^5.0.9"
   },
   "devDependencies": {
